--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+comments : true
 ---
 {% if page.mathjax  %}
 <script type="text/javascript" async src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
@@ -33,12 +34,8 @@ layout: default
     {{ content }}
   </div>
 
-  {%- if site.disqus.shortname -%}
-    {%- include disqus_comments.html -%}
-  {%- endif -%}
+  {%- include disqus_comments.html -%}
 
-  <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
-  {% include disqus.html %} 
- 
+<a class="u-url" href="[SatyamK23.github.io]{{ page.url | relative_url }}" hidden></a>
 </article>
 
